Fixed backgound bleed on profile photo

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ html {
   padding: 0;
   margin: 0;
 }
+img {
+  display: block;
+  width: 100%;
+  border-style: none;
+}
 body {
   display: flex;
   flex-direction: column;
@@ -60,6 +65,7 @@ body {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  overflow: hidden;
 }
 .profile-top {
   background: url('../images/bg-pattern-card.svg') no-repeat;
